objects/Email_Notification_Subscription__c.object
<CustomObject>
    <description>The subscription records for email notifications to be sent to users.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The account a user has subscribed to.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Email Notification Subscriptions</relationshipLabel>
        <relationshipName>Email_Notification_Subscriptions_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email_User_on_Work_Order_Completion__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the user should be emailed when a work order for the account has been completed.</description>
        <label>Email User on Work Order Completion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_on_Request_Inspection_Fulfillment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email on Request Inspection Fulfillment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Appointment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Appointment</label>
        <referenceTo>ServiceAppointment</referenceTo>
        <relationshipLabel>Email Notification Subscriptions</relationshipLabel>
        <relationshipName>Email_Notification_Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The user associated with the subscription record.</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Email_Notification_Subscriptions_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The specific Work Order that this Email Notification Subscription is for.</description>
        <inlineHelpText>The specific Work Order that this Email Notification Subscription is for.</inlineHelpText>
        <label>Work Order</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>Email Notification Subscriptions</relationshipLabel>
        <relationshipName>Email_Notification_Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Email Notification Subscription</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>User__c</columns>
        <columns>Account__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ENS-{000000}</displayFormat>
        <label>Email Notification Subscription Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Email Notification Subscriptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>